[gd_scene load_steps=2 format=3 uid="uid://f8xvhcw4y8o1e"]

[ext_resource type="Script" path="res://scripts/SettingsScene.gd" id="1_4h8jk"]

[node name="SettingsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_4h8jk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -150.0
text = "Game Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = -50.0
offset_bottom = -100.0
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -100.0
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -90.0
offset_right = -50.0
offset_bottom = -70.0
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -90.0
offset_right = 200.0
offset_bottom = -70.0
value = 0.8

[node name="SFXVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = -50.0
offset_bottom = -40.0
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -40.0
value = 1.0

[node name="VoiceVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -30.0
offset_right = -50.0
offset_bottom = -10.0
text = "Voice Volume:"

[node name="VoiceVolumeSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -30.0
offset_right = 200.0
offset_bottom = -10.0
value = 1.0

[node name="ARModeCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 0.0
offset_bottom = 40.0
text = "Enable AR Mode"
button_pressed = true

[node name="VRModeCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 0.0
offset_bottom = 70.0
text = "Enable VR Mode"
button_pressed = true

[node name="MultiplayerCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 0.0
offset_bottom = 100.0
text = "Enable Multiplayer"
button_pressed = true

[node name="GraphicsQualityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 110.0
offset_right = -50.0
offset_bottom = 130.0
text = "Graphics Quality:"

[node name="GraphicsQualityOption" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 110.0
offset_right = 200.0
offset_bottom = 130.0
selected = 2

[node name="LanguageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 140.0
offset_right = -50.0
offset_bottom = 160.0
text = "Language:"

[node name="LanguageOption" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 140.0
offset_right = 200.0
offset_bottom = 160.0
selected = 0

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 180.0
offset_right = 100.0
offset_bottom = 210.0
text = "Save Settings"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 220.0
offset_right = 100.0
offset_bottom = 250.0
text = "Back to Menu"
